--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
-    "next": "13.4.16",
+    "next": "^13.2.4",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
